--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.46",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.13.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
@@ -19,7 +17,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.7.4",
@@ -54,7 +52,10 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.0.31",
+    "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "react-router-dom": "^5.2.1"
   }
 }
